--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     rotation="0 130 0"
                      position="300 0 300" 
              
-                    gps-entity-place="latitude: 40.099471348024785; longitude: -74.22689555996305;"
+                    gps-entity-place="latitude: 40.099941; longitude: -74.226384;"
                           
                 ></a-entity>
 
