--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="0.04162979014061854 0.04162979014061854 0.04162979014061854"
-                    rotation="0 200 0"
-                     position="300 0 300" 
+                    rotation="0 24o 0"
+                     position="250 0 250" 
              
                     gps-entity-place="latitude: 40.099941; longitude: -74.226384;"
                           
